# CookingRecipeGenerator

./: .gitignore  README.md  README_seq2seq_recipe.md  ass2(colab).ipynb  ass2(desktop).ipynb  code_34207147.ipynb  pyproject.toml
