[project]
name = "nlp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bert-score>=0.3.13",
    "en-core-web-sm",
    "gdown>=5.2.0",
    "ipywidgets>=8.1.6",
    "matplotlib>=3.10.1",
    "nltk>=3.9.1",
    "notebook>=7.4.1",
    "numpy<2",
    "pandas>=2.2.3",
    "spacy==3.5.3",
    "torch==2.2.0",
    "torchtext==0.17.0",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.5.0/en_core_web_sm-3.5.0-py3-none-any.whl" }
